--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 
 project(mazegen VERSION 1.0 LANGUAGES CXX)
 
-file(GLOB sources src/*.cpp src/*.hpp)
+file(GLOB sources *.cpp *.hpp)
 
 add_executable(mazegen ${sources})
 
@@ -11,14 +11,13 @@ add_compile_options(mazgen PRIVATE -Wall -Wextra -Wpedantic)
 set_target_properties(mazegen PROPERTIES
     CMAKE_CXX_STANDARD             17
     CMAKE_CXX_COMPILER             "/usr/bin/clang++"
-    CMAKE_CXX_FLAGS                "-Wall -Wextra"
+    CMAKE_CXX_FLAGS                "-Wall -Wextra --verbose"
     CMAKE_CXX_FLAGS_DEBUG          "-g"
     CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG"
     CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG"
     CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g"
     CMAKE_INCLUDE_PATH "/usr/include/c++/11"
 )
-
 
 target_link_libraries(mazegen PUBLIC -lX11)
 
