--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,5 @@ project(mazegen VERSION 1.0 LANGUAGES CXX)
 file(GLOB sources *.cpp *.hpp)
 add_executable(mazegen ${sources})
 
-target_compile_options(mazegen PRIVATE -std=c++17 -Wall -Wextra -g)
+target_compile_options(mazegen PRIVATE -std=c++17 -Wall -Wextra -g -Og)
 target_link_libraries(mazegen PRIVATE -lX11)
