--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.5)
 
 project(mazegen VERSION 1.0 LANGUAGES CXX)
-file(GLOB sources *.cpp *.hpp)
+file(GLOB sources src/*.cpp src/*.hpp)
 add_executable(mazegen ${sources})
 
 target_compile_options(mazegen PRIVATE -std=c++17 -Wall -Wextra -g -Og)
